force-app/main/default/objects/HandsMen_Customer__c/HandsMen_Customer__c.object-meta.xml
<CustomObject>
    <description>Stores customer details</description>
    <label>HandsMen Customer</label>
    <nameField>
        <label>HandsMen Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HandsMen Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>