force-app/main/default/objects/HandsMen_Customer__c/fields/Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loyalty Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>