force-app/main/default/objects/HandsMen_Customer__c/fields/Loyalty_Status__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Status__c</fullName>
    <label>Loyalty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>