force-app/main/default/objects/HandsMen_Customer__c/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula
  >NOT CONTAINS(Email__c, &quot;@gmail.com&quot;)</errorConditionFormula>
    <errorMessage>Please fill Correct Gmail</errorMessage>
</ValidationRule>